--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
   "name": "server",
+  "homepage": ".",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "run start": "nodemon app.js",
     "start": "node app.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
@@ -14,7 +14,6 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.8",
-    "nodemon": "^2.0.6"
+    "mongoose": "^5.11.8"
   }
 }
